<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.auth.let_us_in.LetUsInFragment"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/let_us_in"
        android:layout_marginVertical="25dp"
        android:contentDescription="@string/tukio_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_you_in"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="40sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="24dp">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAllCaps="false"
            android:textColor="?colorTertiary"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp"
            app:strokeColor="#0F000000"
            app:strokeWidth="1dp"
            app:cornerRadius="8dp"
            app:icon="@drawable/facebook_logo"
            app:iconTint="@null"
            app:iconGravity="textStart"
            app:iconSize="38dp"
            android:text="@string/continue_with_facebook"
            />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAllCaps="false"
            android:textColor="?colorTertiary"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp"
            app:strokeColor="#0F000000"
            app:strokeWidth="1dp"
            app:cornerRadius="8dp"
            app:icon="@drawable/google_logo"
            app:iconTint="@null"
            app:iconGravity="textStart"
            app:iconSize="38dp"
            android:text="@string/continue_with_google"
            />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAllCaps="false"
            android:textColor="?colorTertiary"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp"
            app:strokeColor="#0F000000"
            app:strokeWidth="1dp"
            app:cornerRadius="8dp"
            app:icon="@drawable/facebook_logo"
            app:iconTint="@null"
            app:iconGravity="textStart"
            app:iconSize="38dp"
            android:text="@string/continue_with_apple"
            />

    </LinearLayout>






</LinearLayout>